styles.css
body {
    font-family: 'Open Sans', sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    min-height: 100vh;
  }
  
.topsections {
    display: flex;
    flex-direction: row;
    margin: 3% auto;
    padding: 2%;
    padding-bottom: 0;
    margin-bottom: 0;
}

.sectionA {
  border: 2px solid black;
  padding: 20px;
  border-radius: 5px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}


.sectionC {
  flex-grow: 1;
  overflow-y: auto;
  padding: 1%;
  padding-left: 5%; /* Adjust padding as needed */
}
  
  /* Styling for components within sections */
  .component {
    margin-bottom: 20px;
  }

  /* Adjustments for better visibility */
  #map {
    flex-grow: 1;
    border: 2px solid black;
    margin-left: 3%;
    width: 110%; /* Allow the map to fill available width */
    height: 100%; /* Allow the map to fill available height */
    min-width: 600px; /* Resetting min-width to allow full stretching */
    min-height: 300px; /* Set a minimum height for better visibility */
  }
  .result-table {
    border-collapse: collapse;
    width: 100%;
    border: 1px solid #ddd; /* Border for the whole table */
  }
  
  .result-table th, .result-table td {
    border: 1px solid #ddd; /* Borders for table cells */
    padding: 8px;
    text-align: center; /* Center-aligning the table cells */
  }
  
  .result-table th {
    background-color: #f2f2f2;
  }
  
  footer {
    text-align: center;
    font-size: 10px;
    background-color: #f0f0f0;
    padding: 5px;
    width: 100%;
    position: relative; /* Set position to relative */
    bottom: 0;
  }
  /* Default light theme */
body {
  background-color: ghostwhite; /* Light background color */
  color: #000000; /* Dark font color */
  /* Other light theme styles */
}

/* Dark theme */
body.dark-theme {
  background-color: #333333; /* Dark background color */
  color: #ffffff; /* Light font color */
  /* Other dark theme styles */
}

button {
  border-radius: 15px;
  padding: 7px;
  border: 1px solid grey;
  background-color: white;
  transition: all 0.3s ease-in-out; /* Smooth transition */
}

button:hover {
  transform: scale(1.1);
  background-color: #dddddd; /* Lighter background color on hover */
  color: #000000; /* Darker font color on hover */
}

body.dark-theme button {
  background-color: #333333; /* Dark background color for the button in dark mode */
  color: #ffffff; /* Light font color for the button in dark mode */
}

#darkModeBtn {
  position: fixed;
  top: 12px;
  right: 20px;
  border: 1px solid gray;
  z-index: 1000;
  padding: 10px;
  border-radius: 20px; /* Rounded border */
  background-color: #f2f2f1; /* Light background color for the button */
  color: #333333; /* Dark font color for the button */
  cursor: pointer;
  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, transform 0.3s ease-in-out; /* Smooth transition */
}

/* Styles for button in dark mode */
body.dark-theme #darkModeBtn {
  background-color: #333333; /* Dark background color for the button in dark mode */
  color: #ffffff; /* Light font color for the button in dark mode */
}

/* Hover animation */
#darkModeBtn:hover {
  background-color: #dddddd; /* Lighter background color on hover */
  color: #000000; /* Darker font color on hover */
  transform: scale(1.1); /* Scale animation on hover */
}

/* For table headers in dark mode */
.dark-theme .result-table th {
  color: #ffffff; /* White text for better visibility */
  background-color: #333333; /* Dark background */
}

/* For footer text in dark mode */
.dark-theme footer {
  color: #ffffff; /* White text for better visibility */
  background-color: #444444; /* Dark background */
}

/* Default light theme */
body {
  transition: background-color 0.3s ease-in-out; /* Smooth transition */
  background-color: ghostwhite; /* Light background color */
  color: #000000; /* Dark font color */
  /* Other light theme styles */
}

/* Dark theme */
body.dark-theme {
  background-color: #333333; /* Dark background color */
  color: #ffffff; /* Light font color */
  /* Other dark theme styles */
}


  @media screen and (max-width: 768px) {
    .topsections {
      flex-direction: column;
    }
  
    .sectionA, .sectionB, .sectionC {
      flex: auto;
      width: 90%; /* Ensure full width on smaller screens */
    }

    .sectionB {
      width: 92%;
    }

    .sectionC {
      flex-direction: column;
      align-items: center;
      overflow-y: auto; /* Add vertical scrollbar when content overflows */
      max-height: calc(100vh - 100px); /* Adjust as needed to maintain space between table and footer */
      padding-bottom: 20px; /* Adjust padding as necessary */
    }
      .result-table {
        display: grid;
        grid-template-columns: auto auto;
      }
    
      .result-table th, .result-table td {
        width: 50%;
        padding: 8px;
        text-align: left;
      }

      #darkModeBtn {
        position: absolute;
        top: 30px;
        right: 16px;
        font-size: 9px;
        padding: 3px;
      }

      #map {
        margin-left: 0;
        min-width: 300px;

      }
  }
  

